# min-know

./: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  DATABASES.md  FAQ.md  GETTING_STARTED.md  LICENSE  README.md
data/samples/: README.md
examples/: README.md  appearances_maintainer_create_db.rs  appearances_maintainer_extend_db.rs  appearances_maintainer_generate_manifest.rs  appearances_user_1_obtain_part_of_db.rs  appearances_user_2_check_local_db.rs  generics_get_sample_data.rs  generics_user_0_find_transactions.rs  generics_user_find_transactions.rs  get_sample_data.rs  get_sample_nametags_data.rs  maintainer_audit_correctness.rs  maintainer_create_db.rs  maintainer_create_index.rs  maintainer_create_index_generic.rs  maintainer_extend_db.rs  maintainer_extend_index.rs  maintainer_extend_index_generic.rs  maintainer_generate_manifest.rs  maintainer_generate_manifest_generic.rs  maintainer_repair_index.rs  maintainer_repair_index_generic.rs  nametags_maintainer_create_db.rs  nametags_user_1_obtain_part_of_db.rs  nametags_user_2_check_local_db.rs  nametags_user_3_query_db.rs  signatures_get_sample_data.rs  signatures_maintainer_create_db.rs  signatures_user_2_check_local_db.rs  signatures_user_3_user_query_db.rs  user_0_find_transactions.rs  user_0_find_transactions_generic.rs  user_0_obtain_relevant_data_generic.rs  user_1_find_transactions.rs  user_1_obtain_part_of_db.rs  user_1_obtain_part_of_nametags_db.rs  user_1_transaction_receipt.rs  user_2_check_local_db.rs  user_2_inspect_transaction_logs.rs  user_3_decode_via_apis.rs  (+6 more)
src/: constants.rs  discover.rs  encoding.rs  fetch.rs  ipfs.rs  lib.rs  manifest.rs  spec.rs  transform.rs  types.rs  utils.rs
src/config/: address_appearance_index.rs  choices.rs  dirs.rs  mod.rs  types.rs
src/contract_utils/: metadata.rs  mod.rs
src/database/: mod.rs  types.rs  utils.rs
src/extraction/: address_appearance_index.rs  mod.rs  nametags.rs  signatures.rs  traits.rs  types.rs
src/manifest/: address_appearance_index.rs  mod.rs  nametags.rs  signatures.rs
src/parameters/: address_appearance_index.rs  mod.rs  nametags.rs  signatures.rs
src/reader/: mod.rs
src/samples/: address_appearance_index.rs  mod.rs  nametags.rs  signatures.rs  traits.rs  types.rs  utils.rs
src/specs/: address_appearance_index.rs  mod.rs  my_data_spec.rs  nametags.rs  signatures.rs  traits.rs  types.rs
src/unchained/: ipfs.rs  mod.rs  structure.rs  types.rs  utils.rs
tests/: parsing.rs  unchained.rs
(+3083 files in other folders)
