[package]
name = "min-know"
version = "0.1.0-alpha.1"
edition = "2021"
description = "A library for creating and using distributable databases."

[dependencies]
anyhow = { version = "1.0.64", features = ["backtrace"] }
byteorder = "1.4.3"
cid = "0.8.6"
directories = "4.0.1"
env_logger = "0.10.0"
futures-util = "0.3.25"
hex = "0.4.3"
log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_info"] }
rayon = "1.6.1"
regex = "1.6.0"
reqwest = { version = "0.11.12", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
sha3 = "0.10.6"
ssz-rs = { git = "https://github.com/ralexstokes/ssz-rs"}
tokio = { version = "1.21.2", features = ["full"] }
web3 = "0.18.0"
